okd-services/services/litellm/manifests/11-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: litellm
  namespace: llm
  labels:
    app.kubernetes.io/name: litellm
spec:
  host: litellm.apps.okd.cgraaaj.in
  to:
    kind: Service
    name: litellm
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
